--- a/app/composer.json
+++ b/app/composer.json
@@ -6,7 +6,9 @@
     "nesbot/carbon": "^2.57",
     "guzzlehttp/guzzle": "^7.0",
     "illuminate/database": "^9.11",
-    "illuminate/pagination": "^9.12"
+    "illuminate/pagination": "^9.12",
+    "ext-fileinfo": "*",
+    "intervention/image": "^2.7"
   },
   "require-dev": {
     "fakerphp/faker": "^1.19"
